samples/_failures_safe/1761158727_1753b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0236b071.c: In function ‘main’:
./samples/SAFE/__tmp_0236b071.c:158:33: error: expected ‘]’ at end of input
  158 |         input_buffer[--input_len
      |                                 ^
      |                                 ]
./samples/SAFE/__tmp_0236b071.c:158:9: error: expected declaration or statement at end of input
  158 |         input_buffer[--input_len
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_0236b071.c:158:9: error: expected declaration or statement at end of input
